[project]
name = "3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argh>=0.31.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
]

